--- a/client/src/Components/Main/Main.module.css
+++ b/client/src/Components/Main/Main.module.css
@@ -8,11 +8,12 @@
   padding-left: 55px;
 }
 .sum {
+  padding-top: 20px;
   padding-left: 25px;
   padding-bottom: 10px;
 }
 .products {
-  padding-left: 25px;
+  padding-left: 70px;
 }
 .payBtn {
   padding-left: 30px;
